Post Index Buttons Alignment Fixed.

--- a/BibleForumSolution/BibleForum/wwwroot/css/createPost.css
+++ b/BibleForumSolution/BibleForum/wwwroot/css/createPost.css
@@ -3,7 +3,7 @@
 
 .createPostSection {
     background-color: #fff;
-    padding: 60px;
+    padding: 50px 60px 50px 60px;
     box-shadow: 0 10px 20px rgba(0,0,0,0.2), 0 6px 6px rgba(0,0,0,0.3);
 }
 
